[gd_scene load_steps=6 format=4 uid="uid://hndxqih1u0lv"]

[ext_resource type="Script" uid="uid://byc1ywfqaslb1" path="res://scripts/base/room_base.gd" id="1_sasjk"]
[ext_resource type="TileSet" uid="uid://vtvomjrycj6r" path="res://tile_sets/tiles.tres" id="2_hejxt"]
[ext_resource type="Texture2D" uid="uid://i0218cgjpso6" path="res://sprites/bg.png" id="3_3fk0q"]
[ext_resource type="Texture2D" uid="uid://3pv2ff032lf3" path="res://sprites/fg.png" id="3_iue3k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hejxt"]
size = Vector2(272, 320)

[node name="Room" type="Node2D"]
process_mode = 1
texture_filter = 1
script = ExtResource("1_sasjk")

[node name="Bound" type="Area2D" parent="."]
visible = false

[node name="BoundShape" type="CollisionShape2D" parent="Bound"]
position = Vector2(120, 160)
shape = SubResource("RectangleShape2D_hejxt")
debug_color = Color(0.84326, 0.00105984, 0.915728, 0.42)

[node name="Background" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Background"]
visible = false
tile_map_data = PackedByteArray("AAACAAQAAQABAAIAAAADAAQAAQABAAIAAAABAAMAAQAAAAEAAAABAAQAAQAAAAIAAAALAAQAAQABAAIAAAAMAAQAAQABAAIAAAANAAMAAQACAAEAAAANAAQAAQACAAIAAAAFAAQAAQABAAIAAAAGAAQAAQABAAIAAAAHAAQAAQABAAIAAAAIAAQAAQABAAIAAAAJAAQAAQABAAIAAAAEAAQAAQABAAIAAAAKAAQAAQABAAIAAAA=")
tile_set = ExtResource("2_hejxt")

[node name="Bg" type="Sprite2D" parent="Background"]
position = Vector2(120, 160)
texture = ExtResource("3_3fk0q")

[node name="Others" type="Node2D" parent="."]

[node name="Kills" type="Node2D" parent="."]

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(120, 240)

[node name="Foreground" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Foreground"]
visible = false
tile_map_data = PackedByteArray("AAADAA8AAQABAAIAAAAEAA8AAQABAAIAAAAFAA8AAQABAAIAAAAGAA8AAQABAAIAAAAHAA8AAQABAAIAAAAIAA8AAQABAAIAAAAJAA8AAQABAAIAAAAKAA8AAQABAAIAAAALAA8AAQABAAIAAAACAA4AAQAAAAEAAAACAA0AAQAAAAEAAAAMAA4AAQACAAEAAAAMAA0AAQACAAEAAAAMAA8AAQABAAIAAAACAA8AAQABAAIAAAABAA8AAQABAAIAAAAAAA8AAQABAAIAAAANAA8AAQABAAIAAAAOAA8AAQABAAIAAAACAAEAAQABAAAAAAADAAEAAQABAAAAAAAMAAEAAQABAAAAAAALAAEAAQABAAAAAAACAAAAAQABAAEAAAADAAAAAQABAAEAAAAMAAAAAQABAAEAAAALAAAAAQABAAEAAAAFAAEAAQABAAAAAAAFAAAAAQABAAEAAAAGAAAAAQABAAEAAAAHAAAAAQABAAEAAAAIAAAAAQABAAEAAAAIAAEAAQABAAAAAAAHAAEAAQABAAAAAAAGAAEAAQABAAAAAAAJAAAAAQABAAEAAAAJAAEAAQABAAAAAAAEAAAAAQABAAEAAAAKAAAAAQABAAEAAAAEAAEAAQABAAAAAAAKAAEAAQABAAAAAAANAAAAAQABAAEAAAABAAAAAQABAAEAAAABAAIAAQAAAAEAAAANAAIAAQACAAEAAAABAAEAAQAAAAAAAAANAAEAAQACAAAAAAA=")
tile_set = ExtResource("2_hejxt")

[node name="Fg" type="Sprite2D" parent="Foreground"]
position = Vector2(120, 160)
texture = ExtResource("3_iue3k")

[connection signal="area_exited" from="Bound" to="." method="_on_bound_area_exited"]
[connection signal="body_exited" from="Bound" to="." method="_on_bound_body_exited"]
